fix(api): fix build

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ui:typecheck": "npx nx run ui:typecheck",
     "ui:container": "npx nx run ui:container",
     "api:test": "npx nx run api:test",
-    "api:build": "npx nx run api:build",
+    "api:build:prod": "npx nx run api:build:prod",
+    "api:build:stage": "npx nx run api:build:stage",
     "api:lint": "npx nx run api:lint",
     "api:typecheck": "npx nx run api:typecheck",
     "api:container": "npx nx run api:container",
