--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "nuke": "rm -rf node_modules && rm -rf package-lock.json && rm -rf dist && npm cache clean --force",
     "ui:test": "npx nx run ui:test",
     "ui:build:prod": "npx nx run ui:build --configuration=prod",
-    "ui:build:stage": "npx nx run ui:build --configuration=stage",
+    "ui:build:dev": "npx nx run ui:build --configuration=dev",
     "ui:lint": "npx nx run ui:lint",
     "ui:typecheck": "npx nx run ui:typecheck",
     "ui:container": "npx nx run ui:container",
     "api:test": "npx nx run api:test",
     "api:build:prod": "npx nx run api:build:prod",
-    "api:build:stage": "npx nx run api:build:stage",
+    "api:build:dev": "npx nx run api:build:dev",
     "api:lint": "npx nx run api:lint",
     "api:typecheck": "npx nx run api:typecheck",
     "api:container": "npx nx run api:container",
