--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,3 @@
+NODE_ENV=production
 VITE_API_URL=https://api-stage.tableflight.com/graphql
 VITE_REFRESH_TOKEN_URL=https://api-stage.tableflight.com/refresh_token
