--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
-NODE_ENV=production
+NODE_ENV=prod
 VITE_API_URL=https://api-stage.tableflight.com/graphql
 VITE_REFRESH_TOKEN_URL=https://api-stage.tableflight.com/refresh_token
