--- a/.deployment/api/templates/deployment.yaml
+++ b/.deployment/api/templates/deployment.yaml
@@ -18,23 +18,13 @@ spec:
         ports:
         - containerPort: {{ .Values.service.port }}
         env:
-          - name: DATABASE_URL
+        {{- range $key, $value := .Values.env }}
+          - name: {{ $value }}
             valueFrom:
               secretKeyRef:
                 name: api
-                key: DATABASE_URL
-          - name: DIRECT_URL
-            valueFrom:
-              secretKeyRef:
-                name: api
-                key: DIRECT_URL
-          - name: ACCESS_TOKEN_SECRET
-            valueFrom:
-              secretKeyRef:
-                name: api
-                key: ACCESS_TOKEN_SECRET
-          - name: REFRESH_TOKEN_SECRET
-            valueFrom:
-              secretKeyRef:
-                name: api
-                key: REFRESH_TOKEN_SECRET
+                key: {{ $value }}
+        {{- end }}
+
+
+
