--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -70,7 +70,7 @@ jobs:
           docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }}:$TAG
 
       - name: Cleanup Docker images
-        run: docker system prune -f 
+        run: docker system prune -f
 
   deploy-api:
     runs-on: ubuntu-latest
@@ -127,3 +127,9 @@ jobs:
       - name: Deploy UI
         run: |
           helm upgrade --install --timeout 180s ui .deployment/ui --set image.repository=$ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }},image.tag=${GITHUB_SHA}
+
+      - name: Deploy Nginx Ingress Controller
+        run: |
+          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+          helm repo update
+          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --set controller.service.loadBalancerIP="x.x.x.x" --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-internal"="
