--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -72,9 +72,38 @@ jobs:
       - name: Cleanup Docker images
         run: docker system prune -f
 
+  deploy-ingress:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.22.0
+
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.CLUSTER_NAME }}
+
+      - name: Deploy Nginx Ingress Controller
+        run: |
+          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+          helm repo update
+          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --set controller.service.loadBalancerIP="x.x.x.x" --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-internal"=""
+
   deploy-api:
     runs-on: ubuntu-latest
-    needs: build-api
+    needs: [build-api, deploy-ingress]
 
     steps:
       - name: Checkout repository
@@ -102,7 +131,7 @@ jobs:
 
   deploy-ui:
     runs-on: ubuntu-latest
-    needs: build-ui
+    needs: [build-ui, deploy-ingress]
 
     steps:
       - name: Checkout repository
@@ -127,9 +156,3 @@ jobs:
       - name: Deploy UI
         run: |
           helm upgrade --install --timeout 180s ui .deployment/ui --set image.repository=$ECR_REGISTRY/${{ env.ECR_REPOSITORY_UI }},image.tag=${GITHUB_SHA}
-
-      - name: Deploy Nginx Ingress Controller
-        run: |
-          helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
-          helm repo update
-          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --set controller.service.loadBalancerIP="x.x.x.x" --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-internal"="
