--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -74,6 +74,7 @@ jobs:
 
   deploy-ingress:
     runs-on: ubuntu-latest
+    needs: [build-api, build-ui]
 
     steps:
       - name: Checkout repository
@@ -99,7 +100,7 @@ jobs:
         run: |
           helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
           helm repo update
-          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --set controller.service.loadBalancerIP="x.x.x.x" --set controller.service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-internal"=""
+          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --namespace ingress-nginx --create-namespace
 
   deploy-api:
     runs-on: ubuntu-latest
