--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "api:prisma:generate:dev": "prisma generate --schema=apps/api/prisma/schema.prisma",
     "api:prisma:generate:prod": "prisma generate --schema=apps/api/prisma/schema.prisma --no-engine",
     "api:prisma:studio": "prisma studio --schema=apps/api/prisma/schema.prisma",
-    "prisma:migrate:dev": "prisma migrate dev --name init --schema=apps/api/prisma/schema.prisma"
+    "api:prisma:migrate:dev": "prisma migrate dev --name init --schema=apps/api/prisma/schema.prisma"
   },
   "private": true,
   "devDependencies": {
