--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -43,6 +43,7 @@ jobs:
 
   build-ui:
     runs-on: ubuntu-latest
+    needs: build-api
 
     steps:
       - name: Checkout repository
@@ -74,7 +75,7 @@ jobs:
 
   deploy-ingress:
     runs-on: ubuntu-latest
-    needs: [build-api, build-ui]
+    needs: build-ui
 
     steps:
       - name: Checkout repository
