feat(github): add cert-manager install to workflow

--- a/.deployment/api/templates/ingress.yaml
+++ b/.deployment/api/templates/ingress.yaml
@@ -29,5 +29,5 @@ spec:
   tls:
     - hosts:
         - {{ .Values.ingress.host }}
-      secretName: {{ .Release.Name }}-api-tls
+      secretName: tableflight-stage-tls
 
