--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -97,6 +97,23 @@ jobs:
         run: |
           aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.CLUSTER_NAME }}
 
+      - name: Install cert-manager CRDs
+        run: |
+          kubectl apply --validate=false -f https://github.com/jetstack/cert-manager/releases/download/v1.8.0/cert-manager.crds.yaml
+
+      - name: Add Jetstack Helm repository
+        run: |
+          helm repo add jetstack https://charts.jetstack.io
+          helm repo update
+
+      - name: Install cert-manager
+        run: |
+          helm install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.8.0
+
+      - name: Apply ClusterIssuer
+        run: |
+          kubectl apply -f ../../cluster-issuer.yaml
+
       - name: Deploy Nginx Ingress Controller
         run: |
           helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
