--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -104,7 +104,7 @@ jobs:
         run: |
           helm repo add jetstack https://charts.jetstack.io
           helm repo update
-          helm update --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.8.0 --force
+          helm upgrade --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.8.0 --force
 
       - name: Apply ClusterIssuer
         run: |
