--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -43,7 +43,6 @@ jobs:
 
   build-ui:
     runs-on: ubuntu-latest
-    needs: build-api
 
     steps:
       - name: Checkout repository
@@ -95,6 +94,11 @@ jobs:
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.CLUSTER_NAME }}
+
+      - name: Delete existing cert-manager ClusterRoles and ClusterRoleBindings
+        run: |
+          kubectl delete clusterrole cert-manager cert-manager-cainjector cert-manager-controller-issuers cert-manager-controller-clusterissuers cert-manager-controller-certificates cert-manager-controller-orders cert-manager-controller-challenges cert-manager-controller-ingress-shim || true
+          kubectl delete clusterrolebinding cert-manager cert-manager-cainjector cert-manager-controller-issuers cert-manager-controller-clusterissuers cert-manager-controller-certificates cert-manager-controller-orders cert-manager-controller-challenges cert-manager-controller-ingress-shim || true
 
       - name: Install cert-manager CRDs
         run: |
