--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=tableflight-api:1337/graphql
+      - VITE_API_URL=tableflight-api:1337/api/graphql
       - VITE_REFRESH_TOKEN_URL=tableflight-api:1337/refresh-token
 
   api:
