--- a/.deployment/ui/templates/service.yaml
+++ b/.deployment/ui/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Chart.Name }}
+  namespace: default
 spec:
   selector:
     app: {{ .Chart.Name }}
