--- a/.deployment/api/templates/ingress.yaml
+++ b/.deployment/api/templates/ingress.yaml
@@ -19,7 +19,7 @@ spec:
                 name: api
                 port:
                   number: 1337
-          - path: /
+          - path: /(.*)
             pathType: ImplementationSpecific
             backend:
               service:
