--- a/.deployment/api/templates/ingress.yaml
+++ b/.deployment/api/templates/ingress.yaml
@@ -19,8 +19,8 @@ spec:
                 name: api
                 port:
                   number: 1337
-          - path: /(.*)
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: ui
