--- a/.deployment/api/templates/ingress.yaml
+++ b/.deployment/api/templates/ingress.yaml
@@ -3,15 +3,22 @@ kind: Ingress
 metadata:
   name: tableflight-stage-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
     cert-manager.io/cluster-issuer: {{ .Values.ingress.certIssuer }}
     nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
 spec:
   ingressClassName: nginx
   rules:
-    - host: {{ .Values.ingress.host }}
+    - host: stage.tableflight.com
       http:
         paths:
+          - path: /graphql(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: api
+                port:
+                  number: 1337
           - path: /api(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
@@ -19,8 +26,8 @@ spec:
                 name: api
                 port:
                   number: 1337
-          - path: /
-            pathType: Prefix
+          - path: /(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: ui
