--- a/.deployment/api/templates/ingress.yaml
+++ b/.deployment/api/templates/ingress.yaml
@@ -3,7 +3,6 @@ kind: Ingress
 metadata:
   name: tableflight-stage-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
     cert-manager.io/cluster-issuer: {{ .Values.ingress.certIssuer }}
     nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
 spec:
@@ -12,22 +11,15 @@ spec:
     - host: stage.tableflight.com
       http:
         paths:
-          - path: /graphql(/|$)(.*)
-            pathType: ImplementationSpecific
+          - path: /api
+            pathType: Prefix
             backend:
               service:
                 name: api
                 port:
                   number: 1337
-          - path: /api(/|$)(.*)
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: api
-                port:
-                  number: 1337
-          - path: /(.*)
-            pathType: ImplementationSpecific
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: ui
