--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV=prod
-VITE_API_URL=/api/graphql
-VITE_REFRESH_TOKEN_URL=/api/refresh_token
+VITE_API_URL=https://stage.tableflight.com/api/graphql
+VITE_REFRESH_TOKEN_URL=https://stage.tableflight.com/api/refresh_token
