--- a/.github/workflows/deploy-to-stage.yml
+++ b/.github/workflows/deploy-to-stage.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Cleanup Docker images
         run: docker system prune -f
 
-  deploy-ingress:
+  deploy-cert-manager:
     runs-on: ubuntu-latest
 
     steps:
@@ -103,17 +103,47 @@ jobs:
         run: |
           helm repo add jetstack https://charts.jetstack.io
           helm repo update
-          helm upgrade --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.8.0 --force
+          helm upgrade --install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.8.0 --wait
 
       - name: Apply ClusterIssuer
         run: |
           kubectl apply -f cluster-issuer.yaml
 
+      - name: Check cert-manager status
+        run: |
+          kubectl wait --for=condition=available --timeout=120s deployment/cert-manager -n cert-manager
+          kubectl wait --for=condition=available --timeout=120s deployment/cert-manager-webhook -n cert-manager
+          kubectl wait --for=condition=available --timeout=120s deployment/cert-manager-cainjector -n cert-manager
+
+  deploy-ingress:
+    runs-on: ubuntu-latest
+    needs: deploy-cert-manager
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: v1.22.0
+
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.CLUSTER_NAME }}
+
       - name: Deploy Nginx Ingress Controller
         run: |
           helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
           helm repo update
-          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --namespace ingress-nginx --create-namespace
+          helm upgrade --install --timeout 180s ingress-nginx ingress-nginx/ingress-nginx --namespace ingress-nginx --create-namespace --wait
 
   deploy-api:
     runs-on: ubuntu-latest
