--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV=dev
-VITE_API_URL=/graphql
-VITE_REFRESH_TOKEN_URL=http://localhost:1337/refresh_token
+VITE_API_URL=http://localhost:1337/api/graphql
+VITE_REFRESH_TOKEN_URL=http://localhost:1337/api/refresh_token
