--- a/apps/api-e2e/tsconfig.json
+++ b/apps/api-e2e/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "files": [],
-  "include": [],
+  "include": [
+    "jest.config.ts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts",
+    "**/*.gql"
+  ],
   "references": [
     {
       "path": "./tsconfig.spec.json"
