--- a/apps/api-e2e/tsconfig.spec.json
+++ b/apps/api-e2e/tsconfig.spec.json
@@ -5,5 +5,5 @@
     "module": "commonjs",
     "types": ["jest", "node"]
   },
-  "include": ["jest.config.ts", "src/**/*.ts"]
+  "include": ["jest.config.ts", "src/**/*.ts", "*/**/*.gql", "src/**/*.spec.ts", "src/**/*.test.ts", "src/**/*.d.ts"]
 }
