--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
@@ -84,6 +85,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-transform-graphql": "^2.1.0",
     "jsdom": "~22.1.0",
     "jsonwebtoken": "^9.0.2",
     "nx": "19.2.2",
@@ -91,6 +93,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.15.0",
+    "supertest": "^7.0.0",
     "swc-loader": "^0.2.6",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.0",
@@ -104,6 +107,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@graphql-tools/jest-transform": "^2.0.0",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.4",
     "@graphql-tools/utils": "^10.2.2",
