test(api-e2e): set up supertest and jest
* Install supertest dep.

* Get rid of .gql extensions, not worth the hassle.

* Create dummy test to build off of.

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -6,6 +6,5 @@
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "src/**/*.gql", "gql.d.ts"],
-  "composite": true
+  "include": ["src/**/*.ts", "gql.d.ts"]
 }
