--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev:container": "docker-compose up",
     "start": "npx nx run-many --target=serve --projects=api,ui",
     "dev": "npx nx run-many --target=serve --projects=api,ui --output-style=stream --configuration=dev",
-    "lint": "npx nx run-many --target=lint --projects=api,ui",
-    "typecheck": "npx nx run-many --target=typecheck --projects=api,ui",
-    "test": "npx nx run-many --target=test --projects=api,ui",
+    "lint": "npx nx run-many --target=lint",
+    "typecheck": "npx nx run-many --target=typecheck",
+    "test": "npx nx run-many --target=test",
     "e2e": "npx nx run-many --target=e2e --projects=api-e2e,ui-e2e",
+    "all:test": "npx nx run-many --target=test,e2e",
     "nuke": "rm -rf node_modules && rm -rf package-lock.json && rm -rf dist && npm cache clean --force",
     "ui:test": "npx nx run ui:test",
     "ui:build:prod": "npx nx run ui:build --configuration=prod",
@@ -18,6 +19,7 @@
     "ui:typecheck": "npx nx run ui:typecheck",
     "ui:container": "npx nx run ui:container",
     "api:test": "npx nx run api:test",
+    "api:e2e": "npx nx run api-e2e:e2e",
     "api:build:prod": "npx nx run api:build:prod",
     "api:build:dev": "npx nx run api:build:dev",
     "api:lint": "npx nx run api:lint",
@@ -64,6 +66,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
@@ -123,6 +126,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.51.5",
+    "supertest": "^7.0.0",
     "tslib": "^2.3.0",
     "urql": "^4.1.0",
     "uuid": "^9.0.1",
