--- a/apps/api-e2e/project.json
+++ b/apps/api-e2e/project.json
@@ -2,16 +2,22 @@
   "name": "api-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "implicitDependencies": ["api"],
+  "implicitDependencies": [
+    "api"
+  ],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{e2eProjectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/api-e2e/jest.config.ts",
         "passWithNoTests": true
       },
-      "dependsOn": ["api:build"]
+      "dependsOn": [
+        "api:build"
+      ]
     }
   }
 }
